<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".New_event"
    android:orientation="vertical">

    <EditText
        android:id="@+id/nom_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nom_de_l_v_nement"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/date_deb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date_deb"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="15dp"/>


    <EditText
        android:id="@+id/date_fin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date_fin"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/heure_deb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/heure_deb"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/heure_fin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/heure_fin"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/pause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="15dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginBottom="15dp">

        <RadioButton
            android:id="@+id/radioButton_avant"
            android:layout_width="100dp"
            android:layout_height="65dp"
            android:layout_marginStart="30dp"
            android:text="@string/avant"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton_apres"
            android:layout_width="100dp"
            android:layout_height="65dp"
            android:layout_marginStart="30dp"
            android:layout_alignBottom="@+id/radioButton_avant"
            android:layout_marginBottom="-65dp"
            android:text="@string/apr_s"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/duree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/Duree" />


    </RelativeLayout>

    <Button
        android:id="@+id/button_valider"
        android:layout_width="166dp"
        android:layout_height="100dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center"
        android:text="@string/valider" />


</LinearLayout>